<resources>
    <string name="app_name">Satellite Receiver Remote Control</string>
    <string name="on_off">On/Off</string>
    <string name="ok">OK</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="no_infrared_detected">No Infrared Detected!!</string>
    <string name="exit">Exit</string>
    <string name="recall">Recall</string>
    <string name="mute">Mute</string>
    <string name="menu">Menu</string>
</resources>