<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/svMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnOnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/red"
                android:text="@string/on_off"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="@string/ok"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnOnOff" />

            <Button
                android:id="@+id/btnUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@+id/btnOk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/down"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnOk" />

            <Button
                android:id="@+id/btnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/right"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/btnOk"
                app:layout_constraintStart_toEndOf="@+id/btnOk"
                app:layout_constraintTop_toTopOf="@+id/btnOk" />

            <Button
                android:id="@+id/btnLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/left"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/btnOk"
                app:layout_constraintEnd_toStartOf="@+id/btnOk"
                app:layout_constraintTop_toTopOf="@+id/btnOk" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/two"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnDown" />

            <Button
                android:id="@+id/btnOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/one"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/btnTwo"
                app:layout_constraintEnd_toStartOf="@+id/btnTwo"
                app:layout_constraintTop_toTopOf="@+id/btnTwo" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/three"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/btnTwo"
                app:layout_constraintStart_toEndOf="@+id/btnTwo"
                app:layout_constraintTop_toTopOf="@+id/btnTwo" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/btnTwo"
                app:layout_constraintStart_toStartOf="@+id/btnTwo"
                app:layout_constraintTop_toBottomOf="@+id/btnTwo" />

            <Button
                android:id="@+id/btnFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/four"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/btnFive"
                app:layout_constraintEnd_toStartOf="@+id/btnFive"
                app:layout_constraintTop_toTopOf="@+id/btnFive" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/six"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/btnFive"
                app:layout_constraintStart_toEndOf="@+id/btnFive"
                app:layout_constraintTop_toTopOf="@+id/btnFive" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/btnFive"
                app:layout_constraintStart_toStartOf="@+id/btnFive"
                app:layout_constraintTop_toBottomOf="@+id/btnFive" />

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/seven"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/btnEight"
                app:layout_constraintEnd_toStartOf="@+id/btnEight"
                app:layout_constraintTop_toTopOf="@+id/btnEight" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/nine"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/btnEight"
                app:layout_constraintStart_toEndOf="@+id/btnEight"
                app:layout_constraintTop_toTopOf="@+id/btnEight" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/btnEight"
                app:layout_constraintStart_toStartOf="@+id/btnEight"
                app:layout_constraintTop_toBottomOf="@+id/btnEight" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/exit"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@+id/btnUp"
                app:layout_constraintStart_toEndOf="@+id/btnOnOff" />

            <Button
                android:id="@+id/btnRecall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:text="@string/recall"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnZero"
                app:layout_constraintTop_toBottomOf="@+id/btnZero" />

            <Button
                android:id="@+id/btnMute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mute"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/btnOnOff"
                app:layout_constraintStart_toStartOf="@+id/btnExit"
                app:layout_constraintTop_toTopOf="@+id/btnOnOff" />

            <Button
                android:id="@+id/btnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/menu"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/btnExit"
                app:layout_constraintEnd_toStartOf="@+id/btnOnOff"
                app:layout_constraintTop_toTopOf="@+id/btnExit" />

            <Button
                android:id="@+id/btnRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/red"
                app:layout_constraintEnd_toStartOf="@+id/btnGreen"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnOnOff" />

            <Button
                android:id="@+id/btnGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                app:layout_constraintEnd_toStartOf="@+id/btnYellow"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnRed"
                app:layout_constraintTop_toTopOf="@+id/btnRed" />

            <Button
                android:id="@+id/btnYellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                app:layout_constraintEnd_toStartOf="@+id/btnBlue"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnGreen"
                app:layout_constraintTop_toTopOf="@+id/btnGreen" />

            <Button
                android:id="@+id/btnBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnYellow"
                app:layout_constraintTop_toTopOf="@+id/btnYellow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tvUnavailable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_infrared_detected"
        android:textSize="18sp"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>